--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "nanoid": "3.1.23",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
